--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
+    "react-modal": "^3.16.3",
     "react-router": "^7.3.0",
     "react-router-dom": "^7.3.0",
     "react-select": "^5.10.1",
