--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -1,12 +1,7 @@
 [build]
   base = "client"
   command = "npm run build"
-  publish = "client/build"
-
-[[headers]]
-  for = "/*"
-  [headers.values]
-    Content-Type = "text/javascript"
+  publish = "build"
 
 [[redirects]]
   from = "/*"
