See destinations without login fixed

--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,3 @@
 VITE_REACT_APP_BACKEND_URL=https://tripwise-vkj9.onrender.com
+# VITE_REACT_APP_BACKEND_URL=http://localhost:3000
 VITE_REACT_APP_CLIENT_ID=118688729192-n6g40v60ngcuhic0fn62decsvkgt7995.apps.googleusercontent.com
